--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
 <p><a href="http://www.linkedin.com/in/poloornelas">Linked-in</a></p>
 
+<p><a href="http://www.zerokernel.com/">My blog</a></p>
+
+<p><a href="http://www.warstories.com.mx/">My photographer portfolio</a></p>
+
 <p>My github page <a href="https://github.com/warstories" class="user-mention">@warstories</a></p>
       </section>
     </div>
