changed main page text

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Polo Ornelas by warstories</title>
+    <title>Polo Ornelas</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="stylesheets/custom.css">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
@@ -19,23 +20,37 @@
       <header class="without-description">
         <h1>Polo Ornelas</h1>
         <p></p>
+        <!--
         <p class="view"><a href="https://github.com/warstories">View the Project on GitHub <small>warstories</small></a></p>
         <ul>
           <li class="single"><a href="">View On <strong>GitHub</strong></a></li>
         </ul>
+      -->
       </header>
       <section>
         <h3>Hello</h3>
+        <p>My name is Polo Ornelas, I'm a developer/photographer living in Monterrey Mexico. </p>
 
-<p>My name is Polo Ornelas, I'm a developer/photographer living in Monterrey Mexico. For more information about my work visits the sites below: </p>
+        <h3>Developer profile // <a href="http://www.linkedin.com/in/poloornelas">Linked-in</a> // <a href="https://github.com/warstories" class="user-mention">github: @warstories</a></h3>
+        <p>
+            Developer and Team Leader. Interested on projects focused on web development across multiple platforms, specially on the interaction with mobile platforms and how this is changing the web.  <br />
+            I love to learn new technology and I usually hack all my computer related stuff, my linksys router is running tomato linux acting as a NAS and it have an openvpn server, my appleTV can play mkv files and I love to have a raspberry Pi. I’m a firm believer that curiosity drives this world to a better future. 
+        </p>
+        <h3>Photographer profile // <a href="http://www.poloornelas.mx/photo">portfolio</a></h3>
+            <p>
+              Not doing too much comercial photography but instead working on personal projects, I have take photography courses over my life with great teachers but and also learning the hard way.
+              I shoot digital, 35mm, holga and some polaroid, to be honest I like all formats, all have their strenght, but neverthless, the future is digital we should embrace it.
+            </p>
 
-<p><a href="http://www.linkedin.com/in/poloornelas">Linked-in</a></p>
+        <h3>The rest </h3>
+        <p>I run a blog called <a href="http://www.zerokernel.com/">zerokernel</a> that talks about technology, rants and opinions, I have a tumblr called <a href="http://polographer.tumblr.com/">instant life</a> that is my photos and interesting things I found, and I try to start another one with my opionions on music and movies called <a href="http://losanimalesenelpiso.tumblr.com/"> los animales estan en el piso</a> this last one is on spanish (or spanglish), this was also a first, never writed on spanish before.</p>
 
-<p><a href="http://www.zerokernel.com/">My blog</a></p>
 
-<p><a href="http://www.warstories.com.mx/">My photographer portfolio</a></p>
+<p></p>
 
-<p>My github page <a href="https://github.com/warstories" class="user-mention">@warstories</a></p>
+
+<p></p>
+
       </section>
     </div>
     <footer>
