--- a/photo/index.html
+++ b/photo/index.html
@@ -80,7 +80,8 @@
 	
 	<div id="main_container" class="container-fluid">
     <div id="row_container" class="row-fluid override-center" >
-        <img id="img-placeholder" class="shadow" />
+         <i class="icon-chevron-left" id="prev_photo_inside"></i> <img id="img-placeholder" class="shadow" /><i id="next_photo_inside" class="icon-chevron-right"></i> 
+
       </div>
   </div>
   <!--
@@ -129,9 +130,10 @@
 	            	<li class="divider-vertical"></li>
 					      <li class="bottom-text-navbar"><a href="http://www.poloornelas.mx"> &copy; Polo Ornelas 2013 </a></li>
 	            	<li class="divider-vertical"></li>
-              		<li id="prev_photo" class="pointer center-on-bottom-bar">previous</li>
+              		<li id="prev_photo" class="pointer center-on-bottom-bar"><i class="icon-chevron-left icon-white"></i>  previous</li>
 	            	<li class="divider-vertical"></li>
-              		<li id="next_photo" class="pointer center-on-bottom-bar">next</li>
+              		<li id="next_photo" class="pointer center-on-bottom-bar">next <i class="icon-chevron-right icon-white"></i> 
+</li>
             	</ul>
           	</div><!--/.nav-collapse -->
       	</div>
