--- a/photo/index.html
+++ b/photo/index.html
@@ -80,7 +80,10 @@
 	
 	<div id="main_container" class="container-fluid">
     <div id="row_container" class="row-fluid override-center" >
-         <i class="icon-chevron-left" id="prev_photo_inside"></i> <img id="img-placeholder" class="shadow" /><i id="next_photo_inside" class="icon-chevron-right"></i> 
+         <button class="no_style_button" id="prev_photo_inside"><i class="icon-chevron-left" ></i> </button>
+         <img id="img-placeholder" class="shadow" />
+         <button class="no_style_button" id="next_photo_inside"> <i class="icon-chevron-right"></i> </button>
+         <img id="img-placeholder" class="shadow" />
 
       </div>
   </div>
