--- a/photo/index.html
+++ b/photo/index.html
@@ -117,7 +117,7 @@
 		    <h3>Reach me if you like my work</h3>
 		  </div>
 		  <div class="modal-body">
-		    <p>You can follow me on twitter on <a href="http://twitter.com/polographer" target="_blank"> @polographer </a> or drop me an email at poloornelas (at) yahoo.com, we have a <a href="https://www.facebook.com/pages/warstoriescommx/141453335927316">facebook page</a> come and "like" us :) </p> 
+		    <p>You can follow me on twitter on <a href="http://twitter.com/polographer" target="_blank"> @polographer </a> or send me an email at me (at) poloornelas.mx, we have a <a href="https://www.facebook.com/pages/Polo-Ornelas-Fotografia/141453335927316">facebook page</a> come and "like" us :) </p> 
 		  </div>
 		  <div class="modal-footer">
 		  </div>
