changed location to reston

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h3>Hello</h3>
-        <p>My name is Polo Ornelas, I'm a developer/photographer living in Monterrey Mexico. </p>
+        <p>My name is Polo Ornelas, I'm a developer/photographer living in Reston, Virginia. </p>
 
         <h3>Developer profile // <a href="http://www.linkedin.com/in/poloornelas">Linked-in</a> // <a href="https://github.com/warstories" class="user-mention">github: @warstories</a></h3>
         <p>
