change to refresh

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         <h3>Developer profile // <a href="http://www.linkedin.com/in/poloornelas">Linked-in</a> // <a href="https://github.com/warstories" class="user-mention">github: @warstories</a></h3>
         <p>
-            Developer and Team Leader. Interested on projects focused on web development across multiple platforms, specially on the interaction with mobile platforms and how this is changing the web.  <br />
-            I love to learn new technology and I usually hack all my computer related stuff, my linksys router is running tomato linux acting as a NAS and it have an openvpn server, my appleTV can play mkv files and I love to have a raspberry Pi. I’m a firm believer that curiosity drives this world to a better future. 
+            Developer and Team Leader. Interested on mobile development and web platforms, specially on interconection (like apis), mostrly on unix/mac enviroments.  <br />
+            I love to learn new technology and I usually hack all my computer related stuff, my linksys router is running tomato linux acting as a NAS and it have an openvpn server, my appleTV can play mkv files and I love to have a raspberry Pi. I’m a firm believer that curiosity drives this world to a better future.
         </p>
         <h3>Photographer profile // <a href="http://www.poloornelas.mx/photo">portfolio</a></h3>
             <p>
