changed warstories to polographer references

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Polo Ornelas</h1>
         <p></p>
         <!--
-        <p class="view"><a href="https://github.com/warstories">View the Project on GitHub <small>warstories</small></a></p>
+        <p class="view"><a href="https://github.com/polographer">View the Project on GitHub <small>polographer</small></a></p>
         <ul>
           <li class="single"><a href="">View On <strong>GitHub</strong></a></li>
         </ul>
@@ -31,7 +31,7 @@
         <h3>Hello</h3>
         <p>My name is Polo Ornelas, I'm a developer/photographer living in Reston, Virginia. </p>
 
-        <h3>Developer profile // <a href="http://www.linkedin.com/in/poloornelas">Linked-in</a> // <a href="https://github.com/warstories" class="user-mention">github: @warstories</a></h3>
+        <h3>Developer profile // <a href="http://www.linkedin.com/in/poloornelas">Linked-in</a> // <a href="https://github.com/polographer" class="user-mention">github: @polographer</a></h3>
         <p>
             Developer and Team Leader. Interested on mobile development and web platforms, specially on interconection (like apis), mostrly on unix/mac enviroments.  <br />
             I love to learn new technology and I usually hack all my computer related stuff, my linksys router is running tomato linux acting as a NAS and it have an openvpn server, my appleTV can play mkv files and I love to have a raspberry Pi. I’m a firm believer that curiosity drives this world to a better future.
