fixed technical blog link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <h3>Developer profile // <a href="http://www.linkedin.com/in/poloornelas">Linked-in</a> // <a href="https://github.com/polographer" class="user-mention">github: @polographer</a></h3>
         <p>
-            Developer and Team Leader. Interested on mobile development and web platforms, specially on interconection (like apis), mostrly on unix/mac enviroments.  <br />
+            Full stack developer and Team Lead. Interested on mobile development and web platforms, specially on interconection (like apis), I love unix/mac.  <br />
             I love to learn new technology and I usually hack all my computer related stuff, my linksys router is running tomato linux acting as a NAS and it have an openvpn server, my appleTV can play mkv files and I love to have a raspberry Pi. I’m a firm believer that curiosity drives this world to a better future.
         </p>
         <h3>Photographer profile // <a href="http://photo.poloornelas.mx/">portfolio</a> // <a href="http://www.500px.com/polographer"> 500px profile</a></h3>
@@ -43,7 +43,7 @@
             </p>
 
         <h3>The rest </h3>
-        <p>I run a blog called <a href="http://www.zerokernel.com/">zerokernel</a> that talks about technology, rants and opinions, I have a tumblr called <a href="http://polographer.tumblr.com/">instant life</a> that is my photos and interesting things I found, and I try to start another one with my opionions on music and movies called <a href="http://losanimalesenelpiso.tumblr.com/"> los animales estan en el piso</a> this last one is on spanish (or spanglish), this was also a first, never writed on spanish before.</p>
+        <p>I run a blog called <a href="http://sett.com/zerokernel">zerokernel</a> that talks about technology, rants and opinions, I have a tumblr called <a href="http://polographer.tumblr.com/">instant life</a> that is my photos and interesting things I found, and I try to start another one with my opionions on music and movies called <a href="http://losanimalesenelpiso.tumblr.com/"> los animales estan en el piso</a> this last one is on spanish (or spanglish), this was also a first, never writed on spanish before.</p>
 
 
 <p></p>
