moved the main blog to medium

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </p>
 
         <h3>The rest </h3>
-        <p>I run a blog called <a href="http://sett.com/zerokernel">zerokernel</a> that talks about technology, rants and opinions, I have a tumblr called <a href="http://polographer.tumblr.com/">instant life</a> that is my photos and interesting things I found, and I try to start another one with my opionions on music and movies called <a href="http://losanimalesenelpiso.tumblr.com/"> los animales estan en el piso</a> this last one is on spanish (or spanglish), this was also a first, never writed on spanish before.</p>
+        <p>I've moved to medium for my rants and opinions on technology <a href="https://medium.com/@polographer">@polographer </a> , I have a tumblr called <a href="http://polographer.tumblr.com/">instant life</a> that is my photos and interesting things I found, and I try to start another one with my opionions on music and movies called <a href="http://losanimalesenelpiso.tumblr.com/"> los animales estan en el piso</a> this last one is on spanish (or spanglish), this was also a first, never writed on spanish before.</p>
 
 
 <p></p>
